--- a/MacawCSS.css
+++ b/MacawCSS.css
@@ -1,6 +1,8 @@
 body 
     {
         background-color: honeydew;
+        max-width: 1000px;
+        
 }
 
 .macaw-img {
@@ -14,3 +16,50 @@ body
     margin-left: 25%;
 }
 
+.sidenav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 160px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #41b3ab; 
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+}
+
+
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 1.25rem;
+    color: black;
+    display: block;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.site-header /*logo*/ 
+    {
+        margin-left: 160px;
+    }
+
+.title {
+    margin-left: 165px;
+    margin-right: -116px;
+}
+.secondary-content {
+    padding: 0;
+    margin-left: 150px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
