--- a/MacawCSS.css
+++ b/MacawCSS.css
@@ -31,7 +31,7 @@ body
 }
 
 .secondary-content {
-    padding: 0;
+    padding-left: 40px;
     margin-left: 160px;
 }
 
@@ -40,25 +40,96 @@ body
     padding-top: 5px;
 }
 
+/*===========Mobile Menu ================================================================================= */
+
+.mobileToggle {  
+    
+    color: #f8e981;
+    position: relative;
+    top: 0px;
+    right: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-left: 5px;
+    font-size: medium;
+    display: inline-block;
+    cursor: pointer;
+    content: "Menu";
+    
+}
+
+.mobileToggle:hover {
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #f8e981;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.bar1::after {
+    content: "Menu";
+    margin-left: 41px;
+    font-size: large;
+}
+
+
+/* Rotate first bar */
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+    
+}
+.change .bar1::after {
+    display: none;
+}
+
+.change::after{
+    content: "Close";
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+    opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+}
+
+
 h5 {
     text-align: center;
-    letter-spacing: -1px;
+    text-decoration-line: underline;
+    color:whitesmoke;
+
 }
 
 .sidebarnav {
-    padding-left: 25px;
+    padding-left: 0px;
+    list-style-type: none;
+    height: auto;
 }
 
 .sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #41b3ab; 
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
+        height: auto; /* Full-height: remove this if you want "auto" height */
+        width: 200px; /* Set the width of the sidebar */
+        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: #41b3ab; 
+        /* background-color: #f8e9a1; */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 20px;
+        padding-bottom: 0;
+        display: none;
+    
 }
 
 
@@ -68,13 +139,21 @@ h5 {
     padding: 6px 0;
     text-decoration: none;
     font-size: 18px;
-    color: black;
+    color: #374785;
     display: block;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: #e8a87c;
+}
+
+.nav-tabs .nav-link {
+    border: 1px solid #41b3ab;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+    background-color: honeydew;
+    
 }
 
 .site-header /*logo*/ 
@@ -85,6 +164,7 @@ h5 {
 .title {
     margin-left: 165px;
     margin-right: -116px;
+    
 }
 
 footer {
@@ -98,9 +178,23 @@ background-color: #41b3ab;
 .Email,
 .International {
     color: white;
+    padding-left: 5px;
+    padding-right: 5px;
 }
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+
+
+
+
+@media(min-width: 700px){
+
+    .mobileToggle {
+        display: none;
+    }
+
+    .sidenav {
+        display: inline;
+        
+    }
+
 }
+    
