--- a/MacawCSS.css
+++ b/MacawCSS.css
@@ -44,7 +44,7 @@ body
 
 .mobileToggle {  
     
-    color: #f8e981;
+    color: whitesmoke;
     position: relative;
     top: 0px;
     right: 0;
@@ -65,7 +65,7 @@ body
 .bar1, .bar2, .bar3 {
     width: 35px;
     height: 5px;
-    background-color: #f8e981;
+    background-color: whitesmoke;
     margin: 6px 0;
     transition: 0.4s;
 }
@@ -124,12 +124,10 @@ h5 {
         top: 0; /* Stay at the top */
         left: 0;
         background-color: #41b3ab; 
-        /* background-color: #f8e9a1; */
         overflow-x: hidden; /* Disable horizontal scroll */
         padding-top: 20px;
         padding-bottom: 0;
-        display: none;
-    
+           
 }
 
 
@@ -182,6 +180,8 @@ background-color: #41b3ab;
     padding-right: 5px;
 }
 
+
+/*==================== Media Queries============== */
 
 
 
