--- a/MacawCSS.css
+++ b/MacawCSS.css
@@ -6,39 +6,17 @@ body
         
 }
 
-.row {
-    padding-top: 10px;
-    margin: 0;
+header {
+    background-color: #41b3ab;
+    width: 100%;
 }
 
-.container-fluid {
-    margin: 0;
-    padding: 0;
-}
+footer {
+    display:  none;
+    
+    }
 
 
-.macaw-img {
-    border-radius: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
-}
-
-.main-content {
-    margin-left: 70px;
-}
-.map-macaw {
-    margin-left: 25%;
-}
-
-.secondary-content {
-    padding-left: 40px;
-    margin-left: 160px;
-}
-
-.little-facts {
-    font-size: 25px;
-    padding-top: 5px;
-}
 
 /*===========Mobile Menu ================================================================================= */
 
@@ -102,18 +80,71 @@ body
     transform: rotate(45deg) translate(-8px, -8px) ;
 }
 
-
-h5 {
-    text-align: center;
-    text-decoration-line: underline;
-    color:whitesmoke;
-
-}
+/*===================================================== */
 
 .sidebarnav {
     padding-left: 0px;
     list-style-type: none;
     height: auto;
+    width: 100%;
+    position: relative;
+    text-align: right;
+    top: 0px;
+    margin-top: 0px;
+    margin-left: 4px;
+    padding-top: 5px;
+    box-sizing: unset;
+    font-size: small;
+    display: none;
+}
+
+
+.row {
+    padding-top: 10px;
+    margin: 0;
+}
+
+.container-fluid {
+    margin: 0;
+    padding: 0;
+}
+
+
+.macaw-img {
+    border-radius: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.main-content {
+    margin-left: 70px;
+}
+.map-macaw {
+    margin-left: 25%;
+}
+
+.secondary-content {
+    padding-left: 40px;
+    margin-left: 160px;
+}
+
+.little-facts {
+    font-size: 25px;
+    padding-top: 5px;
+}
+
+
+h5 {
+    text-align: center;
+    text-decoration-line: underline;
+    color:whitesmoke;
+    display: none;
+
+}
+
+.logo {
+    height: 87px;
+    margin: 5px;
 }
 
 .sidenav {
@@ -125,8 +156,9 @@ h5 {
         left: 0;
         background-color: #41b3ab; 
         overflow-x: hidden; /* Disable horizontal scroll */
-        padding-top: 20px;
+        padding-top: 48px;
         padding-bottom: 0;
+   
            
 }
 
@@ -146,12 +178,20 @@ h5 {
     color: #e8a87c;
 }
 
-.nav-tabs .nav-link {
+.nav-tabs,
+ .nav-link {
     border: 1px solid #41b3ab;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
     background-color: honeydew;
     
+}
+
+.nav-item {
+    list-style: none;
+    width: 100%;
+    display: inline-block;
+    box-sizing: unset;
 }
 
 .site-header /*logo*/ 
@@ -165,11 +205,7 @@ h5 {
     
 }
 
-footer {
 
-background-color: #41b3ab; 
-
-}
 
 .Phone,
 .tollfreePhone,
